# gmock-demo

./: .clang-format  CMakeLists.txt  EmailService.hpp  UserRegistration.cpp  UserRegistration.hpp  test.cpp
